--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <style>
     body { font-family: sans-serif; display: flex; gap: 30px; padding: 20px; }
     .left, .right { flex: 1; }
+    .right { height: 90vh; overflow-y: scroll; }
     canvas { max-width: 100%; height: 200px; }
     table, th, td { border: 1px solid #ccc; border-collapse: collapse; padding: 4px 8px; }
-    .chart-container { margin-bottom: 10px; }
+    .chart-container { margin-bottom: 20px; }
   </style>
 </head>
 <body>
@@ -87,9 +88,11 @@
       stockList.forEach(name => {
         const container = document.createElement("div");
         container.className = "chart-container";
+        const title = document.createElement("h4");
+        title.innerText = name;
         const canvas = document.createElement("canvas");
         canvas.id = "chart-" + name;
-        container.appendChild(document.createTextNode(name));
+        container.appendChild(title);
         container.appendChild(canvas);
         chartArea.appendChild(container);
 
@@ -97,7 +100,7 @@
         charts[name] = new Chart(ctx, {
           type: "line",
           data: {
-            labels: Array(priceHistories[name].length).fill(""),
+            labels: priceHistories[name].map((_, i) => i),
             datasets: [{
               label: name,
               data: priceHistories[name],
@@ -107,6 +110,7 @@
           },
           options: {
             responsive: true,
+            animation: false,
             scales: {
               x: { display: false },
               y: { beginAtZero: false }
@@ -230,12 +234,12 @@
     setInterval(updatePrices, 2000); // 2초마다 가격 갱신
 
     setInterval(() => {
-      for (const name of stockList) prices[name] *= 0.5; // 100초마다 폭락
-    }, 100000);
+      for (const name of stockList) prices[name] = Math.max(10, Math.floor(prices[name] * 0.5));
+    }, 100000); // 100초마다 폭락
 
     setInterval(() => {
-      for (const name of stockList) prices[name] *= 2.2; // 150초마다 폭등
-    }, 150000);
+      for (const name of stockList) prices[name] = Math.max(10, Math.floor(prices[name] * 2.2));
+    }, 150000); // 150초마다 폭등
   </script>
 </body>
 </html>
